# trailswet

./: .env  .gitignore  Cargo.toml  Dockerfile  README.txt  dev  docker-compose.yml  seeds.sql
.cargo/: config
db/: schema.sql
migrations/: 20210329023046_add_date_to_games.sql  20210816224344_add_trails.sql
scripts/: build_dev_image.sh  lld_watch.sh  run_dev_container.sh
src/: main.rs  migrate.rs  models.rs  orchestrators.rs  utils.rs
src/controllers/: games_controller.rs  miscellaneous_controller.rs  mod.rs  teams_controller.rs
src/controllers/service_api/v1/: games_controller.rs  mod.rs
src/controllers/www/: games_controller.rs  miscellaneous_controller.rs  mod.rs  trails_controller.rs
src/models/: day.rs  game.rs  team.rs  trail.rs
src/orchestrators/: game_orchestrator.rs  games_orchestrator.rs  home_page_orchestrator.rs  teams_orchestrator.rs  trail_orchestrator.rs  trails_orchestrator.rs
src/services/v1/: games.rs
src/services/v1/games/: search.rs
src/static/javascript/: myapp.js  shaka-player.compiled.js
src/static/stylesheets/: common.css  game.css  games.css  home.css  teams.css
src/static/tmp/: sample_manifest.mpd
src/templates/games/: show.html
src/templates/miscellaneous/: home.html
src/templates/teams/: index.html
src/templates/trails/: index.html  show.html
src/utils/: netflix_error.rs  presenter.rs  trailswet_error.rs
src/views/: home.html  index.html
src/views/games/: show.html
templates/games/: show.html
