[package]
name = "netflix"
version = "0.1.0"
authors = ["Carson Rajcan <carajcan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
futures = "0.3"
tera = "1.6.1"
serde = "1.0"
sqlx = { version = "0.5.1", features = [ "postgres", "runtime-actix-rustls" ] }
