[package]
name = "netflix"
version = "0.1.0"
authors = ["Carson Rajcan <carajcan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.10.5"
actix-web = "3"
actix-http = "2.2.0"
dotenv = "0.15.0"
futures-util = "0.3.12"
tera = "1.6.1"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.4.2", features = [ "postgres", "runtime-actix-native-tls" ] }

# [build-dependencies]
# askama = "0.10.5"]
