[package]
name = "netflix"
version = "0.1.0"
authors = ["Carson Rajcan <carajcan@gmail.com>"]
edition = "2018"

[profile.dev]
debug = 0

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.10.5"
actix-web = "3"
actix-files = "0.5.0"
actix-http = "2.2.0"
chrono = { version = "0.4.19", features = [ "serde" ] }
derive_more = "0.99.11"
dotenv = "0.15.0"
env_logger = "0.8.3"
futures-util = "0.3.12"
lazy_static = "1.4.0"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.4.2", features = [ "chrono", "postgres", "runtime-actix-native-tls" ] }
